styles.css
html{
    font-family: 'Source Code Pro', monospace;
    color: white;
    height: 100vh;
}

header {
    padding: 5px;
    height: 20px;
    border-top: 2px dashed white;
    border-bottom: 2px dashed white;
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo{
    height: 25px;
}

body {
    margin: 0;
    background-color: black;
    padding: 3rem 6rem;
    min-height: 100%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

section{
    width: 33%;
}

main{
    width: 100%;
    display: flex;
    gap: 3rem;
}

.yellow{
    color: #FCEE21;
}

.green{
    color: green;
}

.pink{
    color: #FF00FF;
}

.blue{
    color: #00FFFF;
    text-decoration: none;
}

.blue:hover{
    text-decoration: underline;
}

.container{
    margin: 2rem 0;
    list-style: none;
    padding: 0;
}

.container > * {
    margin: 6px 0px 6px 0px;
}

.banner{
    border-bottom: 2px dashed white;
    padding-bottom: 2rem;
}

.two{
    display: none;
}

.divisor{
    border: 1px solid white;
}

.second{
    display: none;
}

.projectName:hover{
    cursor: pointer;
    text-decoration: underline;
}



@media only screen and (max-width: 1100px) {
    main{
        flex-direction: column;
        align-items: center;
    }

    section{
        width: 90%;
    }

    body{
        padding: 2rem 2.5rem;
    }

    footer{
        font-size: 0.8rem;
    }
}

